<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/back_theme"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="15dp">


        <TextView
            android:id="@+id/input_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/hint_enter_code"
            android:inputType="number"
            android:maxLength="5"
            android:padding="@dimen/padding_margin_12"
            android:textColor="@color/my_black"
            android:textSize="@dimen/font_size_20" />



        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_margin_20"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:padding="@dimen/padding_margin_12"
            android:textColor="@color/my_black"
            android:textSize="@dimen/font_size_20" />


        <!-- <EditText
             android:id="@+id/input_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_margin_20"
             android:background="@drawable/edittext_border"
             android:gravity="center"
             android:hint="@string/hint_type"
             android:inputType="text"
             android:padding="@dimen/padding_margin_12"
             android:textColor="@color/my_black"
             android:textSize="@dimen/font_size_20" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_margin_20"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="1dp">


            <Spinner
                android:id="@+id/spinner_cow_buffalo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownWidth="match_parent"
                android:gravity="center"
                android:prompt="@string/hint_type"
                android:spinnerMode="dialog" />
        </LinearLayout>


        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_margin_20"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/padding_margin_12"
            android:textColor="@color/my_black"
            android:textSize="@dimen/font_size_20" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="@dimen/padding_margin_40"
            android:background="@drawable/customborder"
            android:padding="12dp"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            android:textColor="@color/con_theme"
            android:textSize="@dimen/font_size_20" />

    </LinearLayout>
</ScrollView>